--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,5 @@ hs_err_pid*
 .idea/
 
 SinaTweetCrawler/SinaTweetCrawler.iml
+
+Spider_SinaTweetCrawler_java/SinaTweetCrawler/src/com/sina/crawl/regex.java
